# MLOPs

G4_1erProjecto, MLOps/: README.md  docker-compose.yml  requirements.txt
G4_1erProjecto, MLOps/config/: paths.py
G4_1erProjecto, MLOps/docker/: Dockerfile
G4_1erProjecto, MLOps/notebooks/: MLOPS_Proyecto1.ipynb
G4_1erTaller, MLOps/: Dockerfile  README.md  api.py  penguin_classifier_gradientboosting.pkl  requirements.txt  train_penguin_v1.py
G4_2doTaller, MLOps/: README.md
G4_3erTaller, MLOps/: Dockerfile  Dockerfile_api  README.md  docker-compose.yml  requirements.txt
G4_4toTaller, MLOPs/: README.md  paths.env
G4_taller-locust/: README.md  docker-compose-con-limitacion.yml  docker-compose.yml  locustfile.py  main.py  train_penguin.py
proyecto1/: Dockerfile  README.md  docker-compose.yml  pyproject.toml
proyecto1/notebooks/: DataExploration.ipynb
proyecto2/: .env  .gitignore  README  README.md  docker-compose.yml
proyecto3/: .env  README.md  docker-compose.yml
proyecto4/: .dockerignore  .env  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
proyecto4/.github/workflows/: ci.yml  desktop.ini
proyecto4/airflow/dags/: train_daily.py
proyecto4/charts/mlops/: Chart.yaml  values.yaml
proyecto4/charts/mlops/template/: cronjob-train.yaml  deployment-api.yaml  deployment-ui.yaml  service-api.yaml  service-ui.yaml
proyecto4/docker/: Dockerfile.api  Dockerfile.training  Dockerfile.ui
proyecto4/infra/argo/: mlops-app.yaml
proyecto4/services/fastapi_app/: config.py  main.py  state.py
proyecto4/services/fastapi_app/models/: __init__.py
proyecto4/services/fastapi_app/routers/: predict.py
proyecto4/services/streamlit_ui/: app.py
proyecto4/services/training_pipeline/: __init__,py  cli.py  config.py  data_loader.py  model.py  pipeline.py  shap_analysis.py
proyecto4/tests/integration/: test_api.py
proyecto4/tests/unit/: test_data_loader.py  test_model.py
(+108 files in other folders)
