[project]
name = "mlops-proyecto1"
version = "0.1.0"
description = "Pipeline de MLOps para procesamiento de datos"
dependencies = [
    "pandas",
    "numpy",
    "scikit-learn",
    "tensorflow",
    "tensorflow-metadata",
    "tensorflow-transform>=1.14.0",  # Usa una versi칩n m치s reciente
    "apache-beam[gcp]>=2.48.0",  # Versi칩n m치s reciente para evitar conflictos con fastavro
    "ml-metadata",
    "jupyter",
    "jupyterlab"
]
